# affective-brain

./: CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
docs/: integration_strategy.md
examples/: simulation.py
src/affective_brain/: __init__.py
src/affective_brain/core/: analyzer.py  appraisal.py  brain.py  engine.py  middleware.py  modulator.py  persistence.py  soul_mapper.py
src/affective_brain/onboarding/: generator.py  session.py
src/core/: soul_mapper.py
